--- a/test/cassettes/Recipient_get.yml
+++ b/test/cassettes/Recipient_get.yml
@@ -2,6 +2,112 @@
 http_interactions:
 - request:
     method: get
+    uri: https://slack.com/api/conversations.list?token=blah
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 08 Oct 2020 03:04:52 GMT
+      Server:
+      - Apache
+      X-Slack-Req-Id:
+      - 97eba3a9672fced144b9625e70b337ef
+      Referrer-Policy:
+      - no-referrer
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Access-Control-Allow-Headers:
+      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
+        x-b3-sampled, x-b3-flags
+      Vary:
+      - Accept-Encoding
+      X-Slack-Backend:
+      - r
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Expose-Headers:
+      - x-slack-req-id, retry-after
+      X-Content-Type-Options:
+      - nosniff
+      X-Xss-Protection:
+      - '0'
+      Content-Length:
+      - '55'
+      Content-Type:
+      - application/json; charset=utf-8
+      X-Via:
+      - haproxy-www-k2o1,haproxy-edge-pdx-f5k6
+    body:
+      encoding: ASCII-8BIT
+      string: '{"ok":false,"error":"invalid_auth"}'
+  recorded_at: Thu, 08 Oct 2020 03:04:52 GMT
+- request:
+    method: get
+    uri: https://slack.com/api/monkeys?token=<SLACK_TOKEN>
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 08 Oct 2020 03:04:52 GMT
+      Server:
+      - Apache
+      X-Slack-Req-Id:
+      - e24d4b53e7aaabae8c07fbc2d6192260
+      Referrer-Policy:
+      - no-referrer
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Access-Control-Allow-Headers:
+      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
+        x-b3-sampled, x-b3-flags
+      Vary:
+      - Accept-Encoding
+      X-Slack-Backend:
+      - r
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Expose-Headers:
+      - x-slack-req-id, retry-after
+      X-Content-Type-Options:
+      - nosniff
+      X-Xss-Protection:
+      - '0'
+      Content-Length:
+      - '73'
+      Content-Type:
+      - application/json; charset=utf-8
+      X-Via:
+      - haproxy-www-td7e,haproxy-edge-pdx-dhzt
+    body:
+      encoding: ASCII-8BIT
+      string: '{"ok":false,"error":"unknown_method","req_method":"monkeys"}'
+  recorded_at: Thu, 08 Oct 2020 03:04:52 GMT
+- request:
+    method: get
     uri: https://slack.com/api/conversations.list?token=<SLACK_TOKEN>
     body:
       encoding: US-ASCII
@@ -19,13 +125,13 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Wed, 07 Oct 2020 01:40:10 GMT
+      - Thu, 08 Oct 2020 03:04:53 GMT
       Server:
       - Apache
       X-Slack-Req-Id:
-      - bc564fba3df7d27b9986e15af525b0cd
+      - fe500907d342be65fba7cd417b835449
       X-Oauth-Scopes:
-      - users:read,channels:read,chat:write
+      - users:read,channels:read,chat:write,incoming-webhook
       Access-Control-Expose-Headers:
       - x-slack-req-id, retry-after
       Access-Control-Allow-Origin:
@@ -54,125 +160,19 @@ http_interactions:
       Referrer-Policy:
       - no-referrer
       Content-Length:
-      - '656'
+      - '719'
       Content-Type:
       - application/json; charset=utf-8
       X-Via:
-      - haproxy-www-wtop,haproxy-edge-pdx-ed3w
+      - haproxy-www-g9mv,haproxy-edge-pdx-1x0h
     body:
       encoding: ASCII-8BIT
-      string: '{"ok":true,"channels":[{"id":"C01BKP7MWNB","name":"random","is_channel":true,"is_group":false,"is_im":false,"created":1601939539,"is_archived":false,"is_general":false,"unlinked":0,"name_normalized":"random","is_shared":false,"parent_conversation":null,"creator":"U01BKP7MGVD","is_ext_shared":false,"is_org_shared":false,"shared_team_ids":["T01C6M7N136"],"pending_shared":[],"pending_connected_team_ids":[],"is_pending_ext_shared":false,"is_member":false,"is_private":false,"is_mpim":false,"topic":{"value":"","creator":"","last_set":0},"purpose":{"value":"This
+      string: '{"ok":true,"channels":[{"id":"C01BKP7MWNB","name":"random","is_channel":true,"is_group":false,"is_im":false,"created":1601939539,"is_archived":false,"is_general":false,"unlinked":0,"name_normalized":"random","is_shared":false,"parent_conversation":null,"creator":"U01BKP7MGVD","is_ext_shared":false,"is_org_shared":false,"shared_team_ids":["T01C6M7N136"],"pending_shared":[],"pending_connected_team_ids":[],"is_pending_ext_shared":false,"is_member":true,"is_private":false,"is_mpim":false,"topic":{"value":"","creator":"","last_set":0},"purpose":{"value":"This
         channel is for... well, everything else. It\u2019s a place for team jokes,
-        spur-of-the-moment ideas, and funny GIFs. Go wild!","creator":"U01BKP7MGVD","last_set":1601939539},"previous_names":[],"num_members":2},{"id":"C01BKP8MF2T","name":"ada-c14-slack-cli-project","is_channel":true,"is_group":false,"is_im":false,"created":1601939581,"is_archived":false,"is_general":false,"unlinked":0,"name_normalized":"ada-c14-slack-cli-project","is_shared":false,"parent_conversation":null,"creator":"U01BKP7MGVD","is_ext_shared":false,"is_org_shared":false,"shared_team_ids":["T01C6M7N136"],"pending_shared":[],"pending_connected_team_ids":[],"is_pending_ext_shared":false,"is_member":false,"is_private":false,"is_mpim":false,"topic":{"value":"","creator":"","last_set":0},"purpose":{"value":"This
+        spur-of-the-moment ideas, and funny GIFs. Go wild!","creator":"U01BKP7MGVD","last_set":1601939539},"previous_names":[],"num_members":4},{"id":"C01BKP8MF2T","name":"ada-c14-slack-cli-project","is_channel":true,"is_group":false,"is_im":false,"created":1601939581,"is_archived":false,"is_general":false,"unlinked":0,"name_normalized":"ada-c14-slack-cli-project","is_shared":false,"parent_conversation":null,"creator":"U01BKP7MGVD","is_ext_shared":false,"is_org_shared":false,"shared_team_ids":["T01C6M7N136"],"pending_shared":[],"pending_connected_team_ids":[],"is_pending_ext_shared":false,"is_member":true,"is_private":false,"is_mpim":false,"topic":{"value":"","creator":"","last_set":0},"purpose":{"value":"This
         *channel* is for working on a project. Hold meetings, share docs, and make
-        decisions together with your team.","creator":"U01BKP7MGVD","last_set":1601939581},"previous_names":[],"num_members":2},{"id":"C01C0MP03K5","name":"general","is_channel":true,"is_group":false,"is_im":false,"created":1601939538,"is_archived":false,"is_general":true,"unlinked":0,"name_normalized":"general","is_shared":false,"parent_conversation":null,"creator":"U01BKP7MGVD","is_ext_shared":false,"is_org_shared":false,"shared_team_ids":["T01C6M7N136"],"pending_shared":[],"pending_connected_team_ids":[],"is_pending_ext_shared":false,"is_member":false,"is_private":false,"is_mpim":false,"topic":{"value":"","creator":"","last_set":0},"purpose":{"value":"This
+        decisions together with your team.","creator":"U01BKP7MGVD","last_set":1601939581},"previous_names":[],"num_members":3},{"id":"C01C0MP03K5","name":"general","is_channel":true,"is_group":false,"is_im":false,"created":1601939538,"is_archived":false,"is_general":true,"unlinked":0,"name_normalized":"general","is_shared":false,"parent_conversation":null,"creator":"U01BKP7MGVD","is_ext_shared":false,"is_org_shared":false,"shared_team_ids":["T01C6M7N136"],"pending_shared":[],"pending_connected_team_ids":[],"is_pending_ext_shared":false,"is_member":true,"is_private":false,"is_mpim":false,"topic":{"value":"","creator":"","last_set":0},"purpose":{"value":"This
         is the one channel that will always include everyone. It\u2019s a great spot
-        for announcements and team-wide conversations.","creator":"U01BKP7MGVD","last_set":1601939538},"previous_names":[],"num_members":2}],"response_metadata":{"next_cursor":""}}'
-  recorded_at: Wed, 07 Oct 2020 01:40:10 GMT
-- request:
-    method: get
-    uri: https://slack.com/api/conversations.list?token=blah
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Wed, 07 Oct 2020 01:48:29 GMT
-      Server:
-      - Apache
-      X-Slack-Req-Id:
-      - d9e79dfb1415c6fb8d18348ba23dc707
-      Referrer-Policy:
-      - no-referrer
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubDomains; preload
-      Access-Control-Allow-Headers:
-      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
-        x-b3-sampled, x-b3-flags
-      Vary:
-      - Accept-Encoding
-      X-Slack-Backend:
-      - r
-      Access-Control-Allow-Origin:
-      - "*"
-      Access-Control-Expose-Headers:
-      - x-slack-req-id, retry-after
-      X-Content-Type-Options:
-      - nosniff
-      X-Xss-Protection:
-      - '0'
-      Content-Length:
-      - '55'
-      Content-Type:
-      - application/json; charset=utf-8
-      X-Via:
-      - haproxy-www-od4o,haproxy-edge-pdx-333x
-    body:
-      encoding: ASCII-8BIT
-      string: '{"ok":false,"error":"invalid_auth"}'
-  recorded_at: Wed, 07 Oct 2020 01:48:29 GMT
-- request:
-    method: get
-    uri: https://slack.com/api/monkeys?token=<SLACK_TOKEN>
-    body:
-      encoding: US-ASCII
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Wed, 07 Oct 2020 01:48:39 GMT
-      Server:
-      - Apache
-      X-Slack-Req-Id:
-      - 0a1c78be94caf1c6411e5f7e0527b501
-      Referrer-Policy:
-      - no-referrer
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubDomains; preload
-      Access-Control-Allow-Headers:
-      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
-        x-b3-sampled, x-b3-flags
-      Vary:
-      - Accept-Encoding
-      X-Slack-Backend:
-      - r
-      Access-Control-Allow-Origin:
-      - "*"
-      Access-Control-Expose-Headers:
-      - x-slack-req-id, retry-after
-      X-Content-Type-Options:
-      - nosniff
-      X-Xss-Protection:
-      - '0'
-      Content-Length:
-      - '73'
-      Content-Type:
-      - application/json; charset=utf-8
-      X-Via:
-      - haproxy-www-bl82,haproxy-edge-pdx-vd1y
-    body:
-      encoding: ASCII-8BIT
-      string: '{"ok":false,"error":"unknown_method","req_method":"monkeys"}'
-  recorded_at: Wed, 07 Oct 2020 01:48:39 GMT
+        for announcements and team-wide conversations.","creator":"U01BKP7MGVD","last_set":1601939538},"previous_names":[],"num_members":4},{"id":"C01C6J4TD7D","name":"do-not-add-bots","is_channel":true,"is_group":false,"is_im":false,"created":1602117099,"is_archived":false,"is_general":false,"unlinked":0,"name_normalized":"do-not-add-bots","is_shared":false,"parent_conversation":null,"creator":"U01BKP7MGVD","is_ext_shared":false,"is_org_shared":false,"shared_team_ids":["T01C6M7N136"],"pending_shared":[],"pending_connected_team_ids":[],"is_pending_ext_shared":false,"is_member":false,"is_private":false,"is_mpim":false,"topic":{"value":"","creator":"","last_set":0},"purpose":{"value":"debugging","creator":"U01BKP7MGVD","last_set":1602117099},"previous_names":[],"num_members":2}],"response_metadata":{"next_cursor":""}}'
+  recorded_at: Thu, 08 Oct 2020 03:04:53 GMT
 recorded_with: VCR 6.0.0
