--- a/test/cassettes/send_message_to_recipient.yml
+++ b/test/cassettes/send_message_to_recipient.yml
@@ -2,6 +2,197 @@
 http_interactions:
 - request:
     method: post
+    uri: https://slack.com/api/chat.postMessage?channel=C01BKP7MWNB&text=maracuyA&token=<SLACK_TOKEN>
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 08 Oct 2020 18:39:11 GMT
+      Server:
+      - Apache
+      X-Slack-Req-Id:
+      - f7ef82609d1d3c6bfb8a70913834cfc8
+      X-Oauth-Scopes:
+      - users:read,channels:read,chat:write,incoming-webhook,groups:read,im:read,mpim:read
+      Access-Control-Expose-Headers:
+      - x-slack-req-id, retry-after
+      Access-Control-Allow-Origin:
+      - "*"
+      X-Slack-Backend:
+      - r
+      X-Content-Type-Options:
+      - nosniff
+      Expires:
+      - Mon, 26 Jul 1997 05:00:00 GMT
+      Cache-Control:
+      - private, no-cache, no-store, must-revalidate
+      X-Xss-Protection:
+      - '0'
+      X-Accepted-Oauth-Scopes:
+      - chat:write
+      Access-Control-Allow-Headers:
+      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
+        x-b3-sampled, x-b3-flags
+      Vary:
+      - Accept-Encoding
+      Pragma:
+      - no-cache
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Referrer-Policy:
+      - no-referrer
+      Content-Length:
+      - '338'
+      Content-Type:
+      - application/json; charset=utf-8
+      X-Via:
+      - haproxy-www-eyic,haproxy-edge-pdx-vd1y
+    body:
+      encoding: ASCII-8BIT
+      string: '{"ok":true,"channel":"C01BKP7MWNB","ts":"1602182352.001500","message":{"bot_id":"B01C94S0PMJ","type":"message","text":"maracuyA","user":"U01BW7XP2KY","ts":"1602182352.001500","team":"T01C6M7N136","bot_profile":{"id":"B01C94S0PMJ","deleted":false,"name":"Fire
+        - Pauline - Slack CLI","updated":1602014193,"app_id":"A01BZS74GDB","icons":{"image_36":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_36.png","image_48":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_48.png","image_72":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/service_72.png"},"team_id":"T01C6M7N136"}}}'
+  recorded_at: Thu, 08 Oct 2020 18:39:12 GMT
+- request:
+    method: post
+    uri: https://slack.com/api/chat.postMessage?channel=USLACKBOT&text=maracuyA&token=<SLACK_TOKEN>
+    body:
+      encoding: UTF-8
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 08 Oct 2020 18:39:13 GMT
+      Server:
+      - Apache
+      X-Slack-Req-Id:
+      - 6ce0802185744d80ecf18629b5e29e56
+      X-Oauth-Scopes:
+      - users:read,channels:read,chat:write,incoming-webhook,groups:read,im:read,mpim:read
+      Access-Control-Expose-Headers:
+      - x-slack-req-id, retry-after
+      Access-Control-Allow-Origin:
+      - "*"
+      X-Slack-Backend:
+      - r
+      X-Content-Type-Options:
+      - nosniff
+      Expires:
+      - Mon, 26 Jul 1997 05:00:00 GMT
+      Cache-Control:
+      - private, no-cache, no-store, must-revalidate
+      X-Xss-Protection:
+      - '0'
+      X-Accepted-Oauth-Scopes:
+      - chat:write
+      Access-Control-Allow-Headers:
+      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
+        x-b3-sampled, x-b3-flags
+      Vary:
+      - Accept-Encoding
+      Pragma:
+      - no-cache
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Referrer-Policy:
+      - no-referrer
+      Content-Length:
+      - '337'
+      Content-Type:
+      - application/json; charset=utf-8
+      X-Via:
+      - haproxy-www-35ul,haproxy-edge-pdx-snuh
+    body:
+      encoding: ASCII-8BIT
+      string: '{"ok":true,"channel":"D01CSQTE4QG","ts":"1602182353.000100","message":{"bot_id":"B01C94S0PMJ","type":"message","text":"maracuyA","user":"U01BW7XP2KY","ts":"1602182353.000100","team":"T01C6M7N136","bot_profile":{"id":"B01C94S0PMJ","deleted":false,"name":"Fire
+        - Pauline - Slack CLI","updated":1602014193,"app_id":"A01BZS74GDB","icons":{"image_36":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_36.png","image_48":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_48.png","image_72":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/service_72.png"},"team_id":"T01C6M7N136"}}}'
+  recorded_at: Thu, 08 Oct 2020 18:39:13 GMT
+- request:
+    method: get
+    uri: https://slack.com/api/conversations.members?channel=D01CSQTE4QG&token=<SLACK_TOKEN>
+    body:
+      encoding: US-ASCII
+      string: ''
+    headers:
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      User-Agent:
+      - Ruby
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Thu, 08 Oct 2020 18:39:14 GMT
+      Server:
+      - Apache
+      X-Slack-Req-Id:
+      - fc5114efb78bab528ad9eb243c312d35
+      X-Oauth-Scopes:
+      - users:read,channels:read,chat:write,incoming-webhook,groups:read,im:read,mpim:read
+      Access-Control-Expose-Headers:
+      - x-slack-req-id, retry-after
+      Access-Control-Allow-Origin:
+      - "*"
+      X-Slack-Backend:
+      - r
+      X-Content-Type-Options:
+      - nosniff
+      Expires:
+      - Mon, 26 Jul 1997 05:00:00 GMT
+      Cache-Control:
+      - private, no-cache, no-store, must-revalidate
+      X-Xss-Protection:
+      - '0'
+      X-Accepted-Oauth-Scopes:
+      - channels:read,groups:read,mpim:read,im:read,read
+      Access-Control-Allow-Headers:
+      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
+        x-b3-sampled, x-b3-flags
+      Vary:
+      - Accept-Encoding
+      Pragma:
+      - no-cache
+      Strict-Transport-Security:
+      - max-age=31536000; includeSubDomains; preload
+      Referrer-Policy:
+      - no-referrer
+      Content-Length:
+      - '106'
+      Content-Type:
+      - application/json; charset=utf-8
+      X-Via:
+      - haproxy-www-0lio,haproxy-edge-pdx-1nke
+    body:
+      encoding: ASCII-8BIT
+      string: '{"ok":true,"members":["U01BW7XP2KY","USLACKBOT"],"response_metadata":{"next_cursor":""}}'
+  recorded_at: Thu, 08 Oct 2020 18:39:14 GMT
+- request:
+    method: post
     uri: https://slack.com/api/chat.postMessage?channel=0000000000000000000000&text=testing&token=<SLACK_TOKEN>
     body:
       encoding: UTF-8
@@ -19,13 +210,13 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Thu, 08 Oct 2020 03:04:55 GMT
+      - Thu, 08 Oct 2020 18:39:15 GMT
       Server:
       - Apache
       X-Slack-Req-Id:
-      - 73fa2c5a01558943a4a3d4947202e064
+      - 3f2d81bf569200d9ffb7897ad5bebb00
       X-Oauth-Scopes:
-      - users:read,channels:read,chat:write,incoming-webhook
+      - users:read,channels:read,chat:write,incoming-webhook,groups:read,im:read,mpim:read
       Access-Control-Expose-Headers:
       - x-slack-req-id, retry-after
       Access-Control-Allow-Origin:
@@ -58,73 +249,9 @@ http_interactions:
       Content-Type:
       - application/json; charset=utf-8
       X-Via:
-      - haproxy-www-w9x0,haproxy-edge-pdx-wg8q
+      - haproxy-www-j9ms,haproxy-edge-pdx-1cbr
     body:
       encoding: ASCII-8BIT
       string: '{"ok":false,"error":"channel_not_found"}'
-  recorded_at: Thu, 08 Oct 2020 03:04:55 GMT
-- request:
-    method: post
-    uri: https://slack.com/api/chat.postMessage?channel=USLACKBOT&text=maracuyA&token=<SLACK_TOKEN>
-    body:
-      encoding: UTF-8
-      string: ''
-    headers:
-      Accept-Encoding:
-      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
-      Accept:
-      - "*/*"
-      User-Agent:
-      - Ruby
-  response:
-    status:
-      code: 200
-      message: OK
-    headers:
-      Date:
-      - Thu, 08 Oct 2020 03:04:57 GMT
-      Server:
-      - Apache
-      X-Slack-Req-Id:
-      - d7e171f046a3a148617dd1e10d02abd8
-      X-Oauth-Scopes:
-      - users:read,channels:read,chat:write,incoming-webhook
-      Access-Control-Expose-Headers:
-      - x-slack-req-id, retry-after
-      Access-Control-Allow-Origin:
-      - "*"
-      X-Slack-Backend:
-      - r
-      X-Content-Type-Options:
-      - nosniff
-      Expires:
-      - Mon, 26 Jul 1997 05:00:00 GMT
-      Cache-Control:
-      - private, no-cache, no-store, must-revalidate
-      X-Xss-Protection:
-      - '0'
-      X-Accepted-Oauth-Scopes:
-      - chat:write
-      Access-Control-Allow-Headers:
-      - slack-route, x-slack-version-ts, x-b3-traceid, x-b3-spanid, x-b3-parentspanid,
-        x-b3-sampled, x-b3-flags
-      Vary:
-      - Accept-Encoding
-      Pragma:
-      - no-cache
-      Strict-Transport-Security:
-      - max-age=31536000; includeSubDomains; preload
-      Referrer-Policy:
-      - no-referrer
-      Content-Length:
-      - '336'
-      Content-Type:
-      - application/json; charset=utf-8
-      X-Via:
-      - haproxy-www-a9vn,haproxy-edge-pdx-n5m8
-    body:
-      encoding: ASCII-8BIT
-      string: '{"ok":true,"channel":"D01CSQTE4QG","ts":"1602126297.000100","message":{"bot_id":"B01C94S0PMJ","type":"message","text":"maracuyA","user":"U01BW7XP2KY","ts":"1602126297.000100","team":"T01C6M7N136","bot_profile":{"id":"B01C94S0PMJ","deleted":false,"name":"Fire
-        - Pauline - Slack CLI","updated":1602014193,"app_id":"A01BZS74GDB","icons":{"image_36":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_36.png","image_48":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/bot_48.png","image_72":"https:\/\/a.slack-edge.com\/80588\/img\/plugins\/app\/service_72.png"},"team_id":"T01C6M7N136"}}}'
-  recorded_at: Thu, 08 Oct 2020 03:04:57 GMT
+  recorded_at: Thu, 08 Oct 2020 18:39:15 GMT
 recorded_with: VCR 6.0.0
